syntax = "proto3";

service CachingEngine {
  rpc ChangeEnableStatus(EnableStatusUpdate) returns (QueryResponse);
  rpc ChangeDefaults(ChangeDefaultUpdate) returns (QueryResponse);

  rpc ClearCache(ClearCacheSchema) returns (QueryResponse);
}

message QueryResponse {
  bool success = 1;
}

message EnableStatusUpdate {
  string domain = 1;
  bool enabled = 2;
}

message ChangeDefaultUpdate {
  CacheLevel cache_level = 1;
  optional sint32 default_ttl = 2;
}

message ClearCacheSchema {
  string domain = 1;
  string path = 2; // can be * for all, or can use * in the path, or can be specific path
}

enum CacheLevel {
  None = 0;
  Standard = 1;
  IgnoreQueryString = 2;
  Aggressive = 3;
}
